--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+spring.application.name=eureka-server
 server.port=7888
 
+
+eureka.instance.hostname=eurekaserver1
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
 
+# 使用http basic安全认证语法，在集群通信中增加认证信息。  http://用户名:密码@地址:端口/eureka/
+#eureka.client.service-url.defaultZone=http://test:123456@eurekaserver1:7888/eureka/
+
+
+# 开启基于http basic的安全认证
+security.basic.enabled=true
+# 设置安全认证用户名
+security.user.name=user
+# 设置安全认证密码
+security.user.password=123456
