--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -7,13 +7,13 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
 
-# 使用http basic安全认证语法，在集群通信中增加认证信息。  http://用户名:密码@地址:端口/eureka/
+# 使锟斤拷http basic锟斤拷全锟斤拷证锟斤法锟斤拷锟节硷拷群通锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷证锟斤拷息锟斤拷  http://锟矫伙拷锟斤拷:锟斤拷锟斤拷@锟斤拷址:锟剿匡拷/eureka/
 #eureka.client.service-url.defaultZone=http://test:123456@eurekaserver1:7888/eureka/
 
 
-# 开启基于http basic的安全认证
-security.basic.enabled=true
-# 设置安全认证用户名
-security.user.name=user
-# 设置安全认证密码
-security.user.password=123456
+# 锟斤拷锟斤拷锟斤拷锟斤拷http basic锟侥帮拷全锟斤拷证
+#security.basic.enabled=true
+## 锟斤拷锟矫帮拷全锟斤拷证锟矫伙拷锟斤拷
+#security.user.name=user
+## 锟斤拷锟矫帮拷全锟斤拷证锟斤拷锟斤拷
+#security.user.password=123456
