--- a/account/src/main/resources/application.properties
+++ b/account/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=account-client
 server.port=7999
 
-#eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
-# 使用http basic安全认证语法，在集群通信中增加认证信息。  http://用户名:密码@地址:端口/eureka/
-eureka.client.service-url.defaultZone=http://user:123456@localhost:7888/eureka/
+eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
+# 使锟斤拷http basic锟斤拷全锟斤拷证锟斤法锟斤拷锟节硷拷群通锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷证锟斤拷息锟斤拷  http://锟矫伙拷锟斤拷:锟斤拷锟斤拷@锟斤拷址:锟剿匡拷/eureka/
+#eureka.client.service-url.defaultZone=http://user:123456@localhost:7888/eureka/
