--- a/kkapi/src/main/resources/application.properties
+++ b/kkapi/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=kkapi
 server.port=7998
 
 eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
+
+feign.hystrix.enabled=true
