--- a/kkapi/src/main/resources/application.properties
+++ b/kkapi/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+app.id=kkapi
+apollo.bootstrap.enabled = true
+apollo.bootstrap.namespaces =TEST1.application
+apollo.meta=http://localhost:8080
+
 spring.application.name=kkapi
 server.port=7998
 
-eureka.client.service-url.defaultZone=http://localhost:7888/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
 
 feign.hystrix.enabled=true
